<resources>
    <string name="app_name">AuthX</string>
    <string name="pass1">Passcode let you log into accounts, even when your device is without an internet connection</string>
    <string name="paas2">Simply tap on the account you want to access to get your code.</string>
    <string name="pass3">Your AuthX account passcodes never expire. Third-party accounts refresh every 30 seconds</string>
    <string name="request">Request</string>
    <string name="welcome_to_certify">Welcome to AuthX</string>
    <string name="auth_helps">AuthX helps you log in securely.You\'ll use this app to approve your logins after entering your username and password on your computer.</string>
    <string name="new_user_to">New User to AuthX?</string>
    <string name="add_account">Login Request</string>
    <string name="already_user">Already a User?</string>
    <string name="sync_account">Re-Link Accounts</string>
    <string name="about">About Passcodes</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="error">Invalid QR Code.</string>
    <string name="error2">please try again QR Code.</string>
    <string name="settings">Settings</string>
    <string name="version">AuthX Version: </string>
    <string name="build">Build: </string>
    <string name="help">Help</string>
    <string name="help_title">HELP</string>
    <string name="face_enrollment">Face Enrollment </string>
    <string name="palm_enrollment">Palm Enrollment </string>
    <string name="authenticator">Trying to sign in from AuthX Tap to options</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="login_request">Push Login Request</string>
    <string name="face">Face Authentication</string>
    <string name="image">image/png,</string>
    <string name="palm_enrollment_request">Palm Enrollment Request</string>
    <string name="palm_login_request">Palm Login Request</string>
    <string name="face_enrollment_request">Face Enrollment Request</string>
    <string name="face_login_request">Face Login Request</string>
    <string name="network_error">Internet is not available.</string>
    <string name="are_you_sure_delete">Are you sure you want to delete the Account</string>
    <string name="enrollment_successful">Enrolled!</string>
    <string name="palm_successful">Palm Enrollment Successful</string>
    <string name="enrollment_error">Face\'s enrollment is failed</string>
    <string name="palm_dev_error">This Device not supporting Palm enrollment.</string>
    <string name="lic_error">This Device not supporting Face or Palm push.</string>
    <string name="no_enrollment_error">This Account don\'t have Palm enrollment.</string>
    <string name="center_your_face1">Please ensure that your face is centrally placed in the circle</string>

    <string name="watch_the_dot">Watch the dot</string>
    <string name="authenticated">Authenticated!</string>
    <string name="enrollment_verification">Face\'s verification is failed</string>
    <string name="internal_error">Internal Error</string>
    <string name="face_not_found">Face not found</string>
    <string name="face_quality_poor">Face quality poor</string>
    <string name="user_not_exists">User not exists</string>
    <string name="user_already_exists">User already exists</string>
    <string name="spoofing_found_face">Spoofing found on face</string>
    <string name="too_many_face_found">Too many face found</string>
    <string name="denied">Denied!</string>
    <string name="push_error">Invalid push!</string>
    <string name="failed">Failed!</string>
    <string name="bio_sign">Bio Sign</string>
    <string name="time_out">Timeout!</string>
    <string name="face_image_blurry"> Face image is blurry </string>
    <string name="move_towards_light">Move towards light</string>
    <string name="move_away_from_the_light">Move Away from the light</string>
    <string name="please_remove_your_glasses">Please remove your glasses</string>
    <string name="poor_face_quality">Poor Face quality</string>
    <string name="captured_image_quality_low">Captured image quality low</string>
    <string name="center_your_face">Center your face</string>
    <string name="ble_setting">Bluetooth Setting</string>
    <string name="device_name">Device Name</string>
    <string name="write_data">Write Data</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="request_timed_out">Request timed out</string>
    <string name="error_camera_open">Error while opening camera!</string>

    <string name="android_issue">Android issue detected.</string>
    <string name="android_no_issue">Android version is up to date.</string>
    <string name="android_issue_message">AuthX has detected that your device is not running the latest version of the Android operating system.</string>
    <string name="os_version">Your Version -</string>
    <string name="recommend_os_version">Recommended -</string>
    <string name="android_no_issue_message">AuthX has detected that your device is running the latest version of the Android operating system.</string>

    <string name="current_version">Current Version:</string>
    <string name="certify_updated">AuthX Mobile app is up to date.</string>
    <string name="authx_no_message">AuthX has detected that your device is running the latest version of the AuthX mobile app.</string>
    <string name="certify_updated_not">AuthX Mobile app issue detected.</string>
    <string name="authx_no_issue_message">AuthX has detected that your device is not running the latest version of the AuthX mobile app.</string>
    <string name="screen_lock">Screen lock is enabled.</string>
    <string name="screen_lock_not">Screen lock is not enabled.</string>
    <string name="screen_lock_message">AuthX has detected that screen lock is enabled on your device.</string>
    <string name="screen_lock_not_message">AuthX has detected that screen lock is not enabled on your device.</string>
    <string name="device_not_rooted">Device is not rooted.</string>
    <string name="device_not_rooted_message">AuthX has detected that this device is not rooted.</string>
    <string name="device_rooted">Device is rooted.</string>
    <string name="device_is_rooted_message">AuthX has detected that this device is rooted.</string>
    <string name="app_link">Play Store link!</string>


    <string name="security_checkup">Security Checkup</string>
    <string name="third_party">Third Party</string>
    <string name="why_are_you_denying_this_request">Why are you denying this request?</string>
    <string name="fraudulent">It seems fraudulent</string>
    <string name="mistake">It was a mistake</string>
    <string name="cancel">Cancel</string>
    <string name="new_version">New version available</string>
    <string name="new_message">Please update your application to continue.</string>
    <string name="update">UPDATE</string>
    <string name="later">Later</string>
    <string name="ok">OK</string>
    <string name="whats_new">What\'s new</string>
    <string name="whats_message">- App update and What\'s new added\n- notification Denied time added dialog \n- Minor bug fixes.App update and What\'s new added\n- notification Denied time added dialog \n- Minor bug fixes.App update and What\'s new added\n- notification Denied time added dialog \n- Minor bug fixes.App update and What\'s new added\n- notification Denied time added dialog \n- Minor bug fixes.App update and What\'s new added\n- notification Denied time added dialog \n- Minor bug fixes.App update and What\'s new added\n- notification Denied time added dialog \n- Minor bug fixes.App update and What\'s new added\n- notification Denied time added dialog \n- Minor bug fixes.App update and What\'s new added\n- notification Denied time added dialog \n- Minor bug fixes.App update and What\'s new added\n- notification Denied time added dialog \n- Minor bug fixes.App update and What\'s new added\n- notification Denied time added dialog \n- Minor bug fixes.</string>
    <string name="passphrase">Mobile number</string>
    <string name="passphrase_error">Please enter number</string>
    <string name="submit">Submit</string>
    <string name="continues">Continue</string>
    <string name="passphrase_is_valid">Passphrase is Valid</string>
    <string name="message_hint">Please enter your mobile number to restore your existing accounts.</string>
    <string name="recover">RELINK</string>
    <string name="recover_title">Relink Accounts</string>
    <string name="recover_title_add">Add Recovery Number</string>
    <string name="verification_message">Enter verification code sent to your mobile number</string>
    <string name="verification">Verification code is missing!!!</string>
    <string name="title_otp">Verify your mobile number</string>
    <string name="phone_validate">Enter the valid phone number!</string>
    <string name="no_account">No Active accounts found with this mobile number.</string>
    <string name="account_added">Accounts Added Successfully</string>
    <string name="service_error">The service is unavailable</string>
    <string name="my_device">MY DEVICE</string>
    <string name="anonymous_reporting">Anonymous reporting is disabled in this version of AuthX</string>
    <string name="about_certifyauth">About AuthX</string>
    <string name="send_usage_data">Send Usage Data</string>
    <string name="bio_sign_title">BIO SIGN</string>
    <string name="bluetooth_setting">BLUETOOTH SETTING</string>
    <string name="recover_accounts">Recover Accounts</string>
    <string name="palm_liveliness">Palm Liveliness</string>
    <string name="user_guide">User Guide</string>
    <string name="enrollment_failed">Enrollment failed. Contact your administrator.</string>
    <string name="without_number">Please enter your mobile number to link this to any of your previously existing accounts.</string>
    <string name="without_title">Enter mobile number</string>
    <string name="skip">Skip</string>
    <string name="relink_message">Contact your administrator to enroll your face and palm again</string>
    <string name="relink_message_title">Relink Complete!</string>
    <string name="hostname">A Server with the specified hostname could not be found.</string>
    <string name="device_security">Device security checkup failed</string>
    <string name="code_copied">Passcode copied</string>
    <string name="host_error">A Server with the specified hostname could not be found.</string>
    <string name="wear_accept">Accept</string>
    <string name="user_name">Username</string>
    <string name="location">Location</string>
    <string name="date_time">Date and Time</string>
    <string name="system">System</string>
    <string name="app_lock">App Lock</string>
    <string name="security">SECURITY</string>
    <string name="tv_help">HELP</string>
    <string name="about_passcodes">About Passcodes</string>
    <string name="permission">Permissions</string>
    <string name="phone">Phone</string>
    <string name="camera">Camera</string>
    <string name="storage">Storage</string>
    <string name="security_msg">We have detected some security issues with your device that require your attention.</string>
    <string name="fix_later">Fix Later</string>
    <string name="fix_now">Fix Now</string>
    <string name="re_connect">Reconnect</string>
</resources>
