<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RecoverActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/tab_single" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin10"
        android:text="@string/message_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">



        <EditText
            android:id="@+id/et_passphrase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginTop="@dimen/margin05"
            android:layout_weight="1"
            android:cursorVisible="true"
            android:gravity="left"
            android:hint="@string/passphrase_error"
            android:imeOptions="actionDone"
            android:inputType="phone|textNoSuggestions"
            android:maxLength="12"
            android:paddingLeft="@dimen/margin03"
            android:paddingRight="@dimen/margin03"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size7" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/passphrase_is_valid"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin30"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_bule"
            android:text="@string/continues"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/margin10"
            android:text="@string/skip"
            android:textSize="@dimen/font_size4"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>