<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:padding="@dimen/margin16"
        android:text="@string/auth_helps"
        android:textColor="@color/gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_welcome"
        android:gravity="center"
        android:padding="@dimen/margin10"
        android:text="@string/welcome_to_certify"
        android:textColor="@color/black" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin30"
        android:background="@drawable/bg_rectangle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin10"
                android:text="@string/new_user_to"
                android:textColor="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin10"
                android:text="@string/add_account"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <include
        android:id="@+id/tab_cou"
        layout="@layout/tab_coustam" />
</RelativeLayout>