<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="left"
        android:src="@drawable/ic_baseline_info_24">
    </ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security_msg"
        android:textSize="16dp"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin05">
    <Button
        android:id="@+id/btn_later"
        android:layout_width="@dimen/margin90"
        android:layout_height="@dimen/margin40"
        android:text="@string/fix_later"
        android:background="@null"
      android:layout_toLeftOf="@+id/btn_now"/>

    <Button
        android:id="@+id/btn_now"
        android:layout_width="@dimen/margin90"
        android:layout_height="@dimen/margin40"
        android:text="@string/fix_now"
        android:background="@null"
        android:layout_alignParentRight="true"/>
    </RelativeLayout>

</LinearLayout>