<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_rectangle"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_merchantName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin10"
        android:layout_marginTop="@dimen/margin20"
        android:gravity="center"
        android:text="@string/are_you_sure_delete"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size4" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:layout_weight="1"
            android:background="@drawable/edit_text_style"
            android:text="@string/no"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bt_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:layout_weight="1"
            android:background="@drawable/edit_text_style"
            android:text="@string/yes"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>
