<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BleSetting">

    <include
        android:id="@+id/app_bar"
        layout="@layout/tab_single" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin20"
        android:text="xcc"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin20"
            android:layout_weight="2"
            android:gravity="right"
            android:text="@string/device_name"
            android:textColor="@color/black" />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="" android:text="@string/app_name"
            android:layout_marginRight="@dimen/margin20"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin20"
            android:layout_weight="2"
            android:gravity="right"
            android:text="@string/write_data"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="" android:text="56364"
            android:layout_marginRight="@dimen/margin20"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin20"
            android:visibility="gone"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Read"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bt_Two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin20"
            android:layout_marginLeft="@dimen/margin20"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Write" />
    </LinearLayout>
</LinearLayout>